fix pickadate overflow

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -54,6 +54,9 @@
 
 .left-fields {
   margin-top: 32px;
+  /* fix pickadate overflow */
+  position: relative;
+  overflow: hidden;
 }
 
 .left-fields .form-group {
